[project]
name = "langchainagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.1.0",
    "langchain-core>=1.2.15",
    "langchain-openai>=0.0.6",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
]
