[project]
name = "langchainagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipython>=9.10.0",
    "langchain>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.15",
    "langchain-openai>=0.0.6",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]
